--- a/paypal_express_checkout/templates/paypal_express_checkout/confirm_checkout.html
+++ b/paypal_express_checkout/templates/paypal_express_checkout/confirm_checkout.html
@@ -4,7 +4,7 @@
     <h1>{% trans "Payment confirmation" %}</h1>
     <form method="post" action=".">
         {% csrf_token %}
-        <p>{% trans "Please confirm the payment of" %} {{ value }} $!</p>
+        <p>{% trans "Please confirm the payment of" %} {{ currency.sign }}{{ value }}!</p>
         <input id="payPalButton" type="submit" name="METHOD" value="{% trans "Confirm payment" %}" />
         <input type="hidden" name="token" value="{{ token }}" />
         <input type="hidden" name="PayerID" value="{{ payerid }}" />
